--- a/index.html
+++ b/index.html
@@ -9,7 +9,20 @@
 </head>
 
 <body>
-    CONTENT
+    <img src="#" alt="Serlokas su pypke menesienoje">
+    <main>
+        <h1>404</h1>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum optio vel, velit neque voluptatum veniam!</p>
+        <p>Lorem ipsum dolor sit amet consectetur.</p>
+        <a href="#">Back home</a>
+    </main>
 </body>
 
 </html>
+
+<!--
+
+Jei neturime konkretaus nuotraukos failo, kuri ketiname naudoti, tai src priskiriame # reiksme
+
+
+-->
