--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <img src="#" alt="Serlokas su pypke menesienoje">
     <main>
         <h1>404</h1>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum optio vel, velit neque voluptatum veniam!</p>
-        <p>Lorem ipsum dolor sit amet consectetur.</p>
+        <p>Looks like this page is missing. Don't worry though, our best man is on the case.</p>
+        <p>Meanwhile, why don't try again by going </p>
         <a href="#">Back home</a>
     </main>
 </body>
