--- a/index.html
+++ b/index.html
@@ -5,23 +5,62 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Serlokas</title>
+    <title>Šerlokas</title>
 </head>
 
-<body>
-    <img src="#" alt="Serlokas su pypke menesienoje">
-    <main>
-        <h1>404</h1>
-        <p>Looks like this page is missing. Don't worry though, our best man is on the case.</p>
-        <p>Meanwhile, why don't try again by going</p>
-        <a href="#">Back home</a>
+<body style="background-color: #eaebed;">
+    <img style="margin-top: 140px; margin-left: 25%; margin: right 5%; display: inline-block; width: 20%; float: left;" src="./Serlokas.jpg" alt="Serlokas su pypke menesienoje">
+    <main style="display: inline-block; width: 25%; float: left; margin-top: 200px;">
+        <h1 style="">404</h1>
+        <p style=""></p>Looks like this page is missing. Don't worry though, our best man is on the case.</p>
+        <p style=""></p>Meanwhile, why don't try again by going</p>
+        <a style="" href="#">Back home</a>
     </main>
 </body>
 </html>
 
 <!--
 
-Jei neturime konkretaus nuotraukos failo, kuri ketiname naudoti, tai src priskiriame # reiksme
+Jei neturime konkretaus nuotraukos failo, kurį ketiname naudoti, tai src priskiriame # reikšmę
 
+Fono spalva: background-color
+RGB <body style=“background-color: rgb(234, 235, 237);
+Šešioliktainis (HEX) <body style=“background-color: #eaebed
+HSV (bet rašosi hsl) <body style=“background-color: hsl(220, 1%, 92%) prie dviejų paskutinių skaičių % prirašyt būtinai.
+
+Matavimo vienetai:
+px ir % (kol kas)
+
+Elementų tarpusavio stumdymas:
+margin: 40px;                  // visomis kryptimis (aplinkui)
+margin-top: 40px;            (atsistūmimasnuo aplinkinių elementų tik nuo savo viršaus)
+margin-right: 40px;          (atsistūmimasnuo aplinkinių elementų tik nuo savo dešinės)
+margin-bottom: 40px;         (atsistūmimasnuo aplinkinių elementų tik nuo savo apačios)
+margin-left: 40 px;          (atsistūmimasnuo aplinkinių elementų tik nuo savo kairės)
+
+
+Elementų atvaizdavimo būdas:
+display: inline;                (default'inė reikšmė <span> ir <a> tag'ams)
+display: block;                 (default, ir taikomas daugumai elementų, ir elementai krenta vienas po kitu)
+display: inline-block;          (jei užtenka vietos, elementai krenta į vieną eilę - horizontaliai) jei naudoji tai prie visu elementų!!!
+float: left;                    (priverstinis elementų pritraukimas nurodyta kryptimi)
+float: right;
+
+Elemento turinio atsistūmimas iki to paties elemento kraštų (vidinis išsipūtimas):
+padding: 25%;                  // visomis kryptimis (aplinkui)
+padding-top: 25%;
+padding-right: 25%;
+padding-bottom: 25%;
+padding-left: 25%;
+
+"Šventa Marija" (elementų statymas į vieną eilę)
+display: inline-block;      (būtina parašyti visada)
+width: 100%;                (nurodyti būtina, bet reikšme turi būti adekvati)
+float: left;                (rašome, jei elementai turi būti vienoje eilėje)
+
+Teksto lygiavimas:
+text-align: left;
+text-align: center;
+text-align: right;
 
 -->
