--- a/index.html
+++ b/index.html
@@ -8,19 +8,20 @@
     <title>Šerlokas</title>
 </head>
 
-<body style="background-color: #eaebed;">
+<body style="background-color: #eaebed; font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">
     <img style="margin-top: 140px; margin-left: 25%; margin: right 5%; width: 20%; float: left;" src="./Serlokas.jpg" alt="Serlokas su pypke menesienoje">
-    <main style="width: 25%; float: left; margin-top: 200px; text-align: center;">
-        <h1 style="font-size: 100px; margin: 0;">404</h1>
-        <p style="margin: 0; font-size: 25px;"></p>Looks like this page is missing. Don't worry though, our best man is on the case.</p>
-        <p>Meanwhile, why don't try again by going</p>
-        <a style="text-transform: uppercase;" href="#">Back home</a>
+    <main style="width: 25%; float: left; margin-top: 250px; text-align: center;">
+        <h1 style="font-size: 100px; margin: 0; color: #303C48;">404</h1>
+        <p style="margin: 0; font-size: 35px; color: #6B7287;">Looks like this page is missing. Don't worry though, our best man is on the case.</p>
+        <p style="color: #B5B9C2;">Meanwhile why don't try again by going</p>
+        <a style="text-transform: uppercase; background-color: #696F89; color: white; text-decoration: none; padding: 15px; display:inline-block; font-weight: bold;" href="#">Back home</a>
     </main>
 </body>
 
 </html>
 
 <!--
+
 VISOS TEKSTINĖS (IR NE KITOKIOS) STILIAUS SAVYBĖS GALI BUTI PAVELDĖTOS IŠ TĖVŲ Į VAIKUS; (text-align, text-decoration, text-transform, šriftai, spalva...)
 
 Jei neturime konkretaus nuotraukos failo, kurį ketiname naudoti, tai src priskiriame # reikšmę
@@ -46,7 +47,7 @@ display: block;
 Elementų atvaizdavimo būdas:
 display: inline;                (default'inė reikšmė <span> ir <a> tag'ams)
 display: block;                 (default, ir taikomas daugumai elementų, ir elementai krenta vienas po kitu)
-display: inline-block;          (jei užtenka vietos, elementai krenta į vieną eilę - horizontaliai) jei naudoji tai prie visu elementų!!!
+display: inline-block;          (jei užtenka vietos, elementai krenta į vieną eilę - horizontaliai)
 
 float: left;                    (priverstinis elementų pritraukimas nurodyta kryptimi)
 float: right
